@@ -25,6 +25,7 @@ class Net::SSLeay::SSL_CTX : pointer {
   use Net::SSLeay::Callback::AlpnSelect;
   use Net::SSLeay::Callback::NewSession;
   use Net::SSLeay::Callback::RemoveSession;
+  use Net::SSLeay::Callback::Msg;
   
   use Net::SSLeay::Callback::AlpnSelect; 
   use Net::SSLeay::Callback::NextProtoSelect;
